<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ProductoActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnEscaner"
            android:layout_width="46dp"
            android:layout_height="43dp"
            android:background="@drawable/qr"
            android:onClick="Escanear" />

        <Button
            android:id="@+id/btnTraer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Codigo"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Nombre"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cantidad"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="@string/costos"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txt_Min"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txt_Prom"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCosto"
                android:layout_width="202dp"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtPromedio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/precios"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="191dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gran_mayor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_view_Mayorista"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtMayor"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtMayorista"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/negocio"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/publico"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtNegocio"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtPublico"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtMilagros"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/milagro"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtMilagro"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>


</LinearLayout>